--- a/Views/Home/Institucional.cshtml
+++ b/Views/Home/Institucional.cshtml
@@ -1,28 +1,78 @@
-<section class="parallax main_products container" data-speed="15" id="Institucional">
+   
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <title>B-Sound</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="..\css\style.css">
+</head>
+
+<body>
+    <header>
+        <h4>"O que você precisa para o seu evento acontecer!!"</h4>
+    </header>
+
+    <div class="slideshow-container">
+
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="../fotos/mesasom.jfif" id="imagem" alt="MesadeSom" style="width: 700px; height: 550px;">
+            <div class="text">Sonorização</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="../fotos/iluminacao.jpg" id="imagem" alt="iluminacao" style="width: 700px; height: 550px;">
+            <div class="text">Iluminação</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="../fotos/GRID_RETANGULAR_STAND.jpg" id="imagem" alt="Estrutura" style="width: 700px; height: 550px;">
+            <div class="text">Estruturas</div>
+        </div>
+
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094</a>
+        <a class="next" onclick="plusSlides(1)">&#10095</a>
+
+    </div>
+
+
+    <div class="dot-container">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+</body>
 
 
 
-    <ul class="produtos">
+@* 
+        <ul class="produtos">
 
 
-        <li>
-            <h2>Sonorização</h2>
-            <img class="fotos" src="./fotos/mesasom.jfif" width="350" height="300">
-            <p class="produto-descricao"></p>
-            <p class="produto-preco"></p>
-        </li>
-        <li>
-            <h2>Iluminação</h2>
-            <img class="fotos" src="./fotos/iluminacao.jpg" width="350" height="300">
-            <p class="produto-descricao"></p>
-            <p class="produto-preco"></p>
-        </li>
-        <li>
-            <h2>Estrutura</h2>
-            <img class="fotos" src="./fotos/GRID_RETANGULAR_STAND.jpg" width="350" height="300">
-            <p class="produto-descricao"></p>
-            <p class="produto-preco"></p>
-        </li>
+            <li>
+                <h2>Sonorização</h2>
+                <img src="../fotos/mesasom.jfif" width="350" height="300">
+                <p class="produto-descricao"></p>
+                <p class="produto-preco"></p>
+            </li>
+            <li>
+                <h2>Iluminação</h2>
+                <img class="fotos" src="../fotos/iluminacao.jpg" width="350" height="300">
+                <p class="produto-descricao"></p>
+                <p class="produto-preco"></p>
+            </li>
+            <li>
+                <h2>Estrutura</h2>
+                <img class="fotos" src="../fotos/GRID_RETANGULAR_STAND.jpg" width="350" height="300">
+                <p class="produto-descricao"></p>
+                <p class="produto-preco"></p>
+            </li>
 
-    </ul>
-</section>
+        </ul>
+    </section>
+
+</body> *@
