--- a/Views/Orcamento/Orcamento.cshtml
+++ b/Views/Orcamento/Orcamento.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Orcamento";
 }
 
-<section class="parallax main_products container" data-speed="15" id="Preagenda">
+
 
     <h4>Peça seu orçamento</h4>
 
@@ -26,7 +26,7 @@
             <label for="radio-sub"> <input type="radio" name="sub" value="sub" id="radio-sub"> Sim</label>
 
 
-            <label for="radio-subnao"><input type="radio" name="sub" value="subnao" id="radio-subnao"> Não</label>
+            <label for="radio-subnao"><input type="radio" name="radio-subnao" value="subnao" id="radio-subnao"> Não</label>
 
         </div>
 
@@ -37,7 +37,7 @@
                     id="radio-iluminacao"> Sim</label>
 
 
-            <label for="radio-iluminacaonao"><input type="radio" name="iluminacao" value="iluminacaonao"
+            <label for="radio-iluminacaonao"><input type="radio" name="iluminacaonao" value="iluminacaonao"
                     id="radio-iluminacaonao"> Não</label>
 
         </div>
