--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http;
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8" />
@@ -12,52 +12,110 @@
 </head>
 
 <body>
-    <header>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container">
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                <img src="../fotos/logos/logomenuteste.svg" alt="..." height="45">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/Institucional">Produtos</a>
+                    </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown"
+                                href="#">Usuario</a>
+                            <div class="dropdown-menu" >
+                                <a class="dropdown-item" href="/Usuario/Cadastro">Cadastro</a>
+                                <a class="dropdown-item" href="/Usuario/Listagem">Listagem</a>
+                                <li class="nav-item dropdown">
+                        <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown"
+                            href="#">Orçamento</a>
+                        <div class="dropdown-menu" >
+                            <a class="dropdown-item" href="/Orcamento/Cadastro">Cadastro</a>
+                            <a class="dropdown-item" href="/Orcamento/Listagem">Listagem</a>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#Institucional">Institucional</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Usuario"
-                            asp-action="Cadastro">Cadastro Usuario</a>
-                    </li>
-                    @if (Context.Session.GetInt32("IdUsuario") == null)
-                    {
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Login">Login</a>
-                    }
-                    else
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario"
-                            asp-action="Listagem">Listagem de Usuario</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orcamento"
-                            asp-action="Cadastro">Cadastro Orçamento</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orcamento"
-                            asp-action="Listagem">Listagem de Orçamento</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Logout">Sair</a>
-                        </li>
-                    }
+
+
+
+@*                     
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Usuário
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/Usuario/Cadastrp"></a>Cadastro
+                                    Usuario</a></li>
+                            <li><a class="dropdown-item" href="#">Orçamento</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li> *@
                 </ul>
             </div>
-            </div>
+        </div>
+    </nav>
+
+
+    @* <body>
+        <header>
+
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+        <ul class="navbar-nav flex-grow-1">
+        <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link text-dark" href="#Institucional">Institucional</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Usuario"
+        asp-action="Cadastro">Cadastro Usuario</a>
+        </li>
+        @if (Context.Session.GetInt32("IdUsuario") == null)
+        {
+        <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Login">Login</a>
+        }
+        else
+        {
+        <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Usuario"
+        asp-action="Listagem">Listagem de Usuario</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Orcamento"
+        asp-action="Cadastro">Cadastro Orçamento</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Orcamento"
+        asp-action="Listagem">Listagem de Orçamento</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Logout">Sair</a>
+        </li>
+        }
+        </ul>
+        </div>
+        </div>
         </nav>
-    </header>
-    <div>
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        </header>
+        <div> *@
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
