--- a/Views/Usuario/Cadastro.cshtml
+++ b/Views/Usuario/Cadastro.cshtml
@@ -2,43 +2,49 @@
 @{
     ViewData["Title"] = "Cadastro";
 }
-<section class="parallax main_products container" id="Cadastro">
+<!DOCTYPE html>
+<html lang="pt-br">
 
-    <header class="bg">
-    <img src="..\fotos\bsoundlogo.png" id="logo">
-    <div class="container">
-        <h4>"O que você precisa para o seu evento acontecer!!"</h4>
-    </div>
+<head>
+    <title>B-Sound</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="..\css\style.css">
+</head>
 
-    <h4>Faça seu cadastro</h4>
-
-
-    <form method="POST" asp-action="Cadastro" class="table">
-        <p id="form1">
-            <label asp-for="Nome">Informe seu nome:</label>
-            <input asp-for="Nome">
-        </p>
-        <p id="form1">
-            <label asp-for="Telefone">Informe seu Telefone:</label>
-            <input asp-for="Telefone">
-        </p>
-        <p id="form1">
-            <label asp-for="Email">Informe seu E-mail:</label>
-            <input asp-for="Email">
-        </p>
-        <p id="form1">
-            <label asp-for="Login">Informe seu Login:</label>
-            <input asp-for="Login">
-        </p>
-        <p id="form1">
-            <label asp-for="Senha">Informe sua Senha:</label>
-            <input asp-for="Senha">
-        </p>
+<body>
 
 
-        <p id="form1">
-            <input type="submit" value="Cadastrar">
-        </p>
+    <section class="parallax main_products container" id="Cadastro">
 
-    </form>
-</section>
+        <h4>Faça seu cadastro</h4>
+
+        <form method="POST" asp-action="Cadastro" class="table">
+
+            <p id="form-group">
+                <label asp-for="Nome">Informe seu nome:</label>
+                <input type="text" asp-for="Nome" class="form-control" required />
+            </p>
+            <p id="form-group">
+                <label asp-for="Telefone">Informe seu Telefone:</label>
+                <input type="text" asp-for="Telefone" class="form-control" required />
+            </p>
+            <p id="form-group">
+                <label asp-for="Email">Informe seu E-mail:</label>
+                <input type="text" asp-for="Email" class="form-control" required />
+            </p>
+            <p id="form-group">
+                <label asp-for="Login">Informe seu Login:</label>
+                <input type="text" asp-for="Login" class="form-control" required />
+            </p>
+            <p id="form-group">
+                <label asp-for="Senha">Informe sua Senha:</label>
+                <input type="text" asp-for="Senha" class="form-control" required />
+            </p>
+
+            <p id="form-group">
+                <input type="submit" value="Cadastrar">
+            </p>
+
+        </form>
+    </section>
+</body>
