--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -6,29 +6,29 @@
 <form method="POST" asp-action="Editar">
 
     <input type="hidden" asp-for="Id">
-    <p id="form1">
+    <p id="form-group">
         <label asp-for="Nome">Informe seu nome:</label>
-        <input asp-for="Nome">
+        <input type="text" asp-for="Nome" class="form-control" required />
     </p>
-    <p id="form1">
+    <p id="form-group">
         <label asp-for="Telefone">Informe seu Telefone:</label>
-        <input asp-for="Telefone">
+        <input type="text" asp-for="Telefone" class="form-control" required />
     </p>
-    <p id="form1">
+    <p id="form-group">
         <label asp-for="Email">Informe seu E-mail:</label>
-        <input asp-for="Email">
+        <input type="text" asp-for="Email" class="form-control" required />
     </p>
-    <p id="form1">
-            <label asp-for="Login">Informe seu Login:</label>
-            <input asp-for="Login">
-        </p>
-        <p id="form1">
-            <label asp-for="Senha">Informe sua Senha:</label>
-            <input asp-for="Senha">
-        </p>
+    <p id="form-group">
+        <label asp-for="Login">Informe seu Login:</label>
+        <input type="text" asp-for="Login" class="form-control" required />
+    </p>
+    <p id="form-group">
+        <label asp-for="Senha">Informe sua Senha:</label>
+        <input type="text" asp-for="Senha" class="form-control" required />
+    </p>
 
 
-    <p id="form1">
+    <p id="form-group">
         <input type="submit" value="Cadastrar">
     </p>
 
