--- a/Views/Usuario/Listagem.cshtml
+++ b/Views/Usuario/Listagem.cshtml
@@ -2,39 +2,31 @@
 @{
     ViewData["Title"] = "Listagem de usuários";
 }
-
-<header class="bg">
-    <img src="..\fotos\bsoundlogo.png" id="logo">
-    <div class="container">
-        <h4>"O que você precisa para o seu evento acontecer!!"</h4>
-    </div>
-
-<table class="table">
-    <tr>
-        <td>ID</td>
-        <td>Nome</td>
-        <td>Telefone</td>
-        <td>Email</td>
-        <td>Login</td>
-        <td>Senha</td>
-
-    </tr>
-
-    @foreach (Usuario u in Model)
-    {
+<div class="centralizado">
+    <table class="table">
         <tr>
-            <td>@u.Id</td>
-            <td>@u.Nome</td>
-            <td>@u.Telefone</td>
-            <td>@u.Email</td>
-            <td>@u.Login</td>
-            <td>@u.Senha</td>
-            <td>
-                <a href="/Usuario/Editar?Id=@u.Id">Alterar</a>
-                <a href="/Usuario/Excluir?Id=@u.Id" onclick="return confirm('Deseja excluir esse item?');">Remover</a>
-
-            </td>
+            <td>ID</td>
+            <td>Nome</td>
+            <td>Telefone</td>
+            <td>Email</td>
+            <td>Login</td>
         </tr>
-    }
 
-</table>
+        @foreach (Usuario u in Model)
+        {
+            <tr>
+                <td>@u.Id</td>
+                <td>@u.Nome</td>
+                <td>@u.Telefone</td>
+                <td>@u.Email</td>
+                <td>@u.Login</td>
+                <td>
+                    <a href="/Usuario/Editar?Id=@u.Id">Alterar/</a>
+                    <a href="/Usuario/Excluir?Id=@u.Id" onclick="return confirm('Deseja excluir esse item?');"> Remover</a>
+
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
