ajuste responsividade imagens e footer

--- a/Views/Home/Clientes.cshtml
+++ b/Views/Home/Clientes.cshtml
@@ -6,7 +6,7 @@
     <div class="container col-12">
 
         <div class="row">
-            <div class="col-sm-12 col-md-3 col-xl-6">
+            <div class="col-sm-6">
                 <section id="texto">
                     <header>
                         <h3>"Nossos Clientes"</h3>
@@ -23,47 +23,47 @@
                 </section>
             </div>
 
-            <div class="col-sm-12 col-md-3 col-xl-6">
+            <div class="col-sm-6">
                 <div class="slideshow-container">
                     <div class="clientes">
 
                         <div class="mySlides fade">
                             <div class="numbertext" id="clientes">1 / 6</div>
                             <img src="../fotos/diegods.jpg" id="imagemclientes" alt="fotoMoradadosBais"
-                                style="width: 250; height: 180;">
+                                style="width: 250; height: 180;" class="img-fluid">
                             <div class="text">DJ Diego DS</div>
                         </div>
 
                         <div class="mySlides fade">
                             <div class="numbertext" id="clientes">2 / 6</div>
                             <img src="../fotos/proaudio.jpg" id="imagemclientes" alt="Perkal"
-                                style="width: 250; height: 130;">
+                                style="width: 250; height: 130;" class="img-fluid">
                             <div class="text">Pro Audio Sonorização</div>
                         </div>
 
                         <div class="mySlides fade">
                             <div class="numbertext" id="clientes">3 / 6</div>
                             <img src="../fotos/carlinhos.jpg" id="imagemclientes" alt="Perkal"
-                                style="width: 250; height: 130;">
+                                style="width: 250; height: 130;" class="img-fluid">
                             <div class="text">DJ Carlinhos Barbosa</div>
                         </div>
 
                         <div class="mySlides fade">
                             <div class="numbertext" id="clientes">4 / 6</div>
                             <img src="../fotos/discautollogo.jpg" id="imagemclientes" alt="Bionatus"
-                                style="width: 250; height: 130;">
+                                style="width: 250; height: 130;" class="img-fluid">
                             <div class="text">Discautol VW</div>
                         </div>
                         <div class="mySlides fade">
                             <div class="numbertext" id="clientes">5 / 6</div>
                             <img src="../fotos/enjoy.jpg" id="imagemclientes" alt="UCDB"
-                                style="width: 250; height: 130;">
+                                style="width: 250; height: 130;" class="img-fluid">
                             <div class="text">DJ Marcelo Natureza Enjoy</div>
                         </div>
                         <div class="mySlides fade">
                             <div class="numbertext" id="clientes">6 / 6</div>
                             <img src="../fotos/clanbier.jpg" id="imagemclientes" alt="fotoADCG" alt="UCDB"
-                                style="width: 250; height: 130;">
+                                style="width: 250; height: 130;" class="img-fluid">
                             <div class="text">Clan Bier</div>
                         </div>
 
