--- a/Views/Home/Produtos.cshtml
+++ b/Views/Home/Produtos.cshtml
@@ -1,12 +1,11 @@
 <body>
 
     <div class="container col-12">
-
         <div class="row">
-            <div class="col-sm-12 col-md-3 col-xl-3">
+            <div class="col-sm-3">
                 <h3 id="texto">"O que você precisa para o seu evento acontecer!!"</h3>
             </div>
-            <div class="col-sm-12 col-md-3 col-xl-3">
+            <div class="col-sm-3">
                 <p id="textoProdutos">
                     "Temos toda e estrutura que você precisa para seu evento! Desde Palco, Grid, Som e Luz. Até
                     instrumentos.
@@ -14,25 +13,25 @@
                 </p>
             </div>
 
-            <div class="col-sm-12 col-md-3 col-xl-6">
+            <div class="col-sm-6">
                 <div class="slideshow-container">
 
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 4</div>
-                        <img src="../fotos/mixer.jpg" id="imagem" alt="MesadeSom" style="width: 700px; height: 550px;">
+                        <img src="../fotos/mixer.jpg" id="imagem" alt="MesadeSom" style="width: 700px; height: 550px;" class="img-fluid">
                         <div class="text">Sonorização</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 4</div>
                         <img src="../fotos/iluminacao.jpg" id="imagem" alt="iluminacao"
-                            style="width: 700px; height: 550px;">
+                            style="width: 700px; height: 550px;" class="img-fluid"> 
                         <div class="text">Iluminação</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">3 / 4</div>
-                        <img src="../fotos/bateria.jpg" id="imagem" alt="Bateria" style="width: 700px; height: 550px;">
+                        <img src="../fotos/bateria.jpg" id="imagem" alt="Bateria" style="width: 700px; height: 550px;" class="img-fluid">
                         <div class="text">Instrumentos</div>
                     </div>
 
