--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="container-fluid col-12">
 
         <div class="row">
-            <div class="col-sm-12 col-md-3 col-xl-6">
+            <div class="col-sm-6">
                 <section id="texto">
                     <header>
                         <h3>"Nossos eventos"</h3>
@@ -24,35 +24,35 @@
                     </div>
                 </section>
             </div>
-            <div class="col-sm-12 col-md-3 col-xl-6">
+            <div class="col-sm-6">
                 <div class="slideshow-container">
 
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 6</div>
-                        <img src="./fotos/01.png" id="imagem" alt="fotoMoradadosBais" style="width: 200; height: 150;">
+                        <img src="./fotos/01.png" id="imagem" alt="fotoMoradadosBais" style="width: 200; height: 150;" class="img-fluid">
                         <div class="text">Sesc Morada dos Baís</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 6</div>
-                        <img src="./fotos/05.png" id="imagem" alt="Perkal" style="width: 200; height: 150;">
+                        <img src="./fotos/05.png" id="imagem" alt="Perkal" style="width: 200; height: 150;" class="img-fluid">
                         <div class="text">Perkal - Chevrolet</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">3 / 6</div>
-                        <img src="./fotos/discautol.jpg" id="imagem" alt="Perkal" style="width: 200; height: 150;;">
+                        <img src="./fotos/discautol.jpg" id="imagem" alt="Perkal" style="width: 200; height: 150;;" class="img-fluid">
                         <div class="text">Discautol - Volkswagem</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">4 / 6</div>
-                        <img src="./fotos/03.png" id="imagem" alt="Bionatus" style="width: 200; height: 150;">
+                        <img src="./fotos/03.png" id="imagem" alt="Bionatus" style="width: 200; height: 150;" class="img-fluid">
                         <div class="text">Formatura - Bionatus</div>
                     </div>
                     <div class="mySlides fade">
                         <div class="numbertext">5 / 6</div>
-                        <img src="./fotos/04.png" id="imagem" alt="UCDB" style="width: 200; height: 150;">
+                        <img src="./fotos/04.png" id="imagem" alt="UCDB" style="width: 200; height: 150;" class="img-fluid">
                         <div class="text">Ginásio Don Bosco</div>
                     </div>
                     <div class="mySlides fade">
