--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1,3 +1,10 @@
+.verde{
+    background-color: green;
+}
+
+.vermelho{
+    background-color: red;
+}
 
 html{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -254,9 +261,4 @@ a{
     color: #f2f2f2;
 }
 
-footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
 
